typescript/checker/tests/conformance/expressions/typeGuards/typeGuardNarrowsPrimitiveIntersection.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            202,
        ),
        hi: BytePos(
            207,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardNarrowsPrimitiveIntersection.ts:5:5
  |
5 | let value: string;
  |     ^^^^^

